fix integer parsing warning